material css bug fixing

--- a/demo/material.html
+++ b/demo/material.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div grid-data id='test' grid-options="gridOptions" grid-actions="gridActions">
-                <div class="controls-wrap">
+                <div class="controls-wrap clearfix">
                     <strong class="items">Found: {{filtered.length}} items</strong>
                     <grid-pagination max-size="5"
                                      boundary-links="true"
