--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Flat JSON format for data tables</title>
+    <title>Angular Data Grid - Bootstrap Design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="demo/bootstrap/css/angular-data-grid.bootstrap.css">
@@ -10,9 +10,9 @@
 <body ng-app="myApp" ng-controller="myAppController" ng-cloak>
 <nav class="navbar navbar-inverse">
     <div class="container">
-        <span class="navbar-brand">Angular Data Grid &mdash; Bootstrap Design</span>
-        <ul class="nav navbar-nav pull-right">
-            <li class="dropdown" style="position: relative;">
+        <span class="navbar-brand">Angular Data Grid - Bootstrap Design</span>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                    aria-expanded="false">Change Theme <span class="caret"></span></a>
                 <ul class="dropdown-menu dropdown-menu-right">
@@ -28,70 +28,87 @@
     </div>
 </nav>
 <div class="container">
-    <h2>External Filters</h2>
+    <div>
+        <h3>Angular Data Grid sample using out-of-box Bootstrap styling</h3>
+        Features enabled: sorting, filtering (using both in-grid and external controls), pagination and item-per-page functionality.
+        Angular UI Datepickers used for date controls, although you can use any other framework / plugins.
+    </div>
+    <hr>
     <div class="row">
         <div>
             <div class="col-md-4">
-                <input type="text" class="form-control order-search-box"
-                       placeholder="Search By Order #"
-                       ng-change="gridActions.filter()"
-                       ng-model="code"
-                       filter-by="code"
-                       filter-type="text">
-            </div>
-            <div class="col-md-4">
-                <p class="input-group">
-                    <input type="text"
-                           class="form-control"
-                           uib-datepicker-popup="{{format}}"
-                           min-date="dateFrom"
-                           max-date="dateTo"
-                           close-text="Close"
-                           ng-model="dateFrom"
-                           show-weeks="true"
-                           is-open="dateFromOpened"
-                           ng-click="dateFromOpened = true"
-                           filter-by="placed"
-                           filter-type="dateFrom"
-                           placeholder="From"
-                           ng-blur="gridActions.filter()"
-                           ng-focus="gridActions.filter()"
-                           show-weeks="false"
-                           close-text="Close"/>
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="open($event)"><i
-                    class="glyphicon glyphicon-calendar"></i></button>
-          </span>
-                </p>
-                <div ng-show="dateTo || dateFrom" class="buttons-right">
-                    <a href="" ng-click="dateTo = ''; dateFrom = ''; reloadGrid();">Clear Dates</a>
+                <div class="form-group">
+                    <label for="orderIdFilter">Search by Order #</label>
+                    <input id="orderIdFilter" type="text" class="form-control order-search-box"
+                           placeholder="Enter Order #"
+                           ng-change="gridActions.filter()"
+                           ng-model="code"
+                           filter-by="code"
+                           filter-type="text">
                 </div>
             </div>
             <div class="col-md-4">
-                <p class="input-group">
-                    <input type="text"
-                           class="form-control"
-                           uib-datepicker-popup="{{format}}"
-                           min-date="dateFrom"
-                           max-date="dateTo"
-                           close-text="Close"
-                           ng-model="dateTo"
-                           show-weeks="true"
-                           is-open="dateToOpened"
-                           ng-click="dateToOpened = true"
-                           filter-by="placed"
-                           filter-type="dateTo"
-                           placeholder="To"
-                           ng-blur="gridActions.filter()"
-                           ng-focus="gridActions.filter()"
-                           show-weeks="false"
-                           close-text="Close">
-                <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="open($event)">
-                        <i class="glyphicon glyphicon-calendar"></i>
-                    </button>
-                </span>
-                </p>
+                <div class="form-group">
+                    <label for="dateFromFilter">Date From</label>
+
+                    <div class="input-group">
+                        <input type="text"
+                               id="dateFromFilter"
+                               class="form-control"
+                               uib-datepicker-popup="dd/MM/yyyy"
+                               placeholder="DD/MM/YYYY"
+                               min-date="dateFrom"
+                               max-date="dateTo"
+                               close-text="Close"
+                               ng-model="dateFrom"
+                               show-weeks="true"
+                               is-open="dateFromOpened"
+                               ng-click="dateFromOpened = true"
+                               filter-by="placed"
+                               filter-type="dateFrom"
+                               ng-blur="gridActions.filter()"
+                               ng-focus="gridActions.filter()"
+                               show-weeks="false"
+                               close-text="Close"/>
+           <span class="input-group-btn">
+                            <label for="dateFromFilter" class="btn btn-default">
+                                <i class="fa fa-calendar"></i></label>
+                          </span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="dateToInput">Date To</label>
+
+                    <div class="input-group">
+                        <input type="text"
+                               id="dateToInput"
+                               class="form-control"
+                               uib-datepicker-popup="dd/MM/yyyy"
+                               placeholder="DD/MM/YYYY"
+                               min-date="dateFrom"
+                               max-date="dateTo"
+                               close-text="Close"
+                               ng-model="dateTo"
+                               show-weeks="true"
+                               is-open="dateToOpened"
+                               ng-click="dateToOpened = true"
+                               filter-by="placed"
+                               filter-type="dateTo"
+                               ng-blur="gridActions.filter()"
+                               ng-focus="gridActions.filter()"
+                               show-weeks="false"
+                               close-text="Close">
+                 <span class="input-group-btn">
+                            <label for="dateToInput" class="btn btn-default">
+                                <i class="fa fa-calendar"></i></label>
+                          </span>
+                    </div>
+                </div>
+                <div ng-show="dateTo || dateFrom" class="buttons-right">
+                    <a href="" ng-click="dateTo = ''; dateFrom = ''; reloadGrid();">Clear Dates</a>
+                </div>
             </div>
         </div>
     </div>
@@ -99,16 +116,20 @@
     <div class="row">
         <div class="col-md-12">
             <div grid-data id='test' grid-options="gridOptions" grid-actions="gridActions">
-                <div class="text-right">
-                    <strong class="items">Found: {{filtered.length}} items</strong>
-                    <grid-pagination max-size="5"
-                                     boundary-links="true"
-                                     class="pagination-sm"
-                                     ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
-                                     total-items="paginationOptions.totalItems"
-                                     ng-model="paginationOptions.currentPage"
-                                     ng-change="reloadGrid()"
-                                     items-per-page="paginationOptions.itemsPerPage"></grid-pagination>
+                <div class="row">
+                    <div class="col-md-3">
+                        <span class="items">{{filtered.length}} items total</span>
+                    </div>
+                    <div class="col-md-9 text-right">
+                        <grid-pagination max-size="5"
+                                         boundary-links="true"
+                                         class="pagination-sm"
+                                         ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
+                                         total-items="paginationOptions.totalItems"
+                                         ng-model="paginationOptions.currentPage"
+                                         ng-change="reloadGrid()"
+                                         items-per-page="paginationOptions.itemsPerPage"></grid-pagination>
+                    </div>
                 </div>
                 <table class="table table-bordered table-striped">
                     <thead>
@@ -156,14 +177,22 @@
                                      items-per-page="paginationOptions.itemsPerPage"></grid-pagination>
                 </div>
                 <div class="text-right">
-                    <div grid-item-per-page="10, 25, 50, 75" class="pagination-sm"></div>
+                    <span grid-item-per-page="10, 25, 50, 75" class="pagination-sm"></span>
                 </div>
             </div>
         </div>
     </div>
+    <hr>
+    <div>
+        <button class="btn btn-info margin-bottom-basic" ng-click="showCode = !showCode">CodePen</button>
+        <div ng-show="showCode">
+            <p data-height="768" data-theme-id="21603" data-slug-hash="YwZXoQ" data-default-tab="html" data-user="alexguardian" class='codepen'>See the Pen <a href='http://codepen.io/alexguardian/pen/YwZXoQ/'>YwZXoQ</a> by AlexZ (<a href='http://codepen.io/alexguardian'>@alexguardian</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
+            <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
+        </div>
+    </div>
+    <hr>
 </div>
 </body>
-
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
