adding link to github

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <h3>Angular Data Grid sample using out-of-box Bootstrap styling</h3>
         Features enabled: sorting, filtering (using both in-grid and external controls), pagination and item-per-page functionality.
         Angular UI Datepickers used for date controls, although you can use any other framework / plugins.
+        <a href="https://github.com/angular-data-grid/angular-data-grid.github.io" target="_blank">Project GitHub</a>
     </div>
     <hr>
     <div class="row">
