--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="container">
     <div>
         <h3>Angular Data Grid sample using out-of-box Bootstrap styling</h3>
-        Features enabled: sorting, filtering (using both in-grid and external controls), pagination and item-per-page functionality.
+        Features enabled: sorting, filtering (using both in-grid and external controls), pagination and items-per-page functionality.
         Angular UI Datepickers used for date controls, although you can use any other framework / plugins.
         <a href="https://github.com/angular-data-grid/angular-data-grid.github.io" target="_blank">Project GitHub</a>
     </div>
@@ -123,14 +123,26 @@
                         <span class="items">{{filtered.length}} items total</span>
                     </div>
                     <div class="col-md-9 text-right">
-                        <grid-pagination max-size="5"
-                                         boundary-links="true"
-                                         class="pagination-sm"
-                                         ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
-                                         total-items="paginationOptions.totalItems"
-                                         ng-model="paginationOptions.currentPage"
-                                         ng-change="reloadGrid()"
-                                         items-per-page="paginationOptions.itemsPerPage"></grid-pagination>
+                        <form class="form-inline pull-right margin-bottom-basic">
+                            <div class="form-group">
+                                <grid-pagination max-size="5"
+                                                 boundary-links="true"
+                                                 class="pagination-sm"
+                                                 total-items="paginationOptions.totalItems"
+                                                 ng-model="paginationOptions.currentPage"
+                                                 ng-change="reloadGrid()"
+                                                 items-per-page="paginationOptions.itemsPerPage"></grid-pagination>
+                            </div>
+                            <div class="form-group items-per-page">
+                                <label for="itemsOnPageSelect1">Items per page:</label>
+                                <select id="itemsOnPageSelect1" class="form-control input-sm" ng-init="paginationOptions.itemsPerPage = '10'" ng-model="paginationOptions.itemsPerPage" ng-change="reloadGrid()">
+                                    <option>10</option>
+                                    <option>25</option>
+                                    <option>50</option>
+                                    <option>75</option>
+                                </select>
+                            </div>
+                        </form>
                     </div>
                 </div>
                 <table class="table table-bordered table-striped">
@@ -168,20 +180,19 @@
                     </tr>
                     </tbody>
                 </table>
-                <div class="text-right">
-                    <grid-pagination max-size="5"
-                                     boundary-links="true"
-                                     class="pagination-sm"
-                                     ng-if="paginationOptions.totalItems  > paginationOptions.itemsPerPage"
-                                     total-items="paginationOptions.totalItems"
-                                     ng-model="paginationOptions.currentPage"
-                                     ng-change="reloadGrid()"
-                                     items-per-page="paginationOptions.itemsPerPage"></grid-pagination>
-                </div>
-                <form class="form-inline">
-                    <div class="form-group pull-right">
-                        <label for="itemsOnPageSelect">Items per page:</label>
-                        <select id="itemsOnPageSelect" class="form-control input-sm" ng-init="paginationOptions.itemsPerPage = '10'" ng-model="paginationOptions.itemsPerPage" ng-change="reloadGrid()">
+                <form class="form-inline pull-right margin-bottom-basic">
+                    <div class="form-group">
+                        <grid-pagination max-size="5"
+                                         boundary-links="true"
+                                         class="pagination-sm"
+                                         total-items="paginationOptions.totalItems"
+                                         ng-model="paginationOptions.currentPage"
+                                         ng-change="reloadGrid()"
+                                         items-per-page="paginationOptions.itemsPerPage"></grid-pagination>
+                    </div>
+                    <div class="form-group items-per-page">
+                        <label for="itemsOnPageSelect2">Items per page:</label>
+                        <select id="itemsOnPageSelect2" class="form-control input-sm" ng-init="paginationOptions.itemsPerPage = '10'" ng-model="paginationOptions.itemsPerPage" ng-change="reloadGrid()">
                             <option>10</option>
                             <option>25</option>
                             <option>50</option>
@@ -189,9 +200,6 @@
                         </select>
                     </div>
                 </form>
-                <!--<div class="text-right">-->
-                <!--<span grid-item-per-page="10, 25, 50, 75" class="pagination-sm"></span>-->
-                <!--</div>-->
             </div>
         </div>
     </div>
