--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                   aria-expanded="false">Change Theme <span class="caret"></span></a>
+                   aria-expanded="false ">Change Theme <span class="caret"></span></a>
                 <ul class="dropdown-menu dropdown-menu-right">
                     <li>
-                        <a href="index.html">Bootstrap Design</a>
+                        <a href="index.html"><strong>Bootstrap Design</strong></a>
                     </li>
                     <li>
                         <a href="demo/material.html">Material Design</a>
