fixing sync URL issue with href="#"

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body ng-app="myApp" ng-controller="myAppController" ng-cloak>
 <nav class="navbar navbar-inverse">
     <div class="container">
-        <span class="navbar-brand">Angular Data Grid - Bootstrap Design</span>
+        <a href="#" class="navbar-brand">Angular Data Grid - Bootstrap Design</a>
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                    aria-expanded="false ">Change Theme <span class="caret"></span></a>
                 <ul class="dropdown-menu dropdown-menu-right">
                     <li>
@@ -31,7 +31,7 @@
 <div class="container">
     <div>
         <h3>Angular Data Grid sample using out-of-box Bootstrap styling</h3>
-        Features enabled: sorting, filtering (using both in-grid and external controls), pagination and items-per-page functionality.
+        Features enabled: sorting, filtering (using both in-grid and external controls), sync with browser URLs, pagination and items-per-page functionality.
         Angular UI Datepickers used for date controls, although you can use any other framework / plugins.
         <a href="https://github.com/angular-data-grid/angular-data-grid.github.io" target="_blank">Project GitHub</a>
     </div>
